// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`list.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- * * *
+ - - -

=====================================output=====================================
- ***

* ---

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
***

=====================================output=====================================
---

================================================================================
`;
